fixed project wrapping failure on safari

--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@ body {
 }
 .project {
     display: flex;
+    margin:0;
+    padding:0;
     width:auto;
     flex-grow: 1;
     flex-shrink: 1;
-    flex-basis: 0;
+    flex-basis: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
